--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,11 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<h2 id="title">LOGO Jobbie</h2>
+
+<div align="left">
+	<ul>
+		<li>home</li>
+		<li>profile</li>
+	</ul>
+</div>
+
 
 {{outlet}}
