--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,8 +2,8 @@
 
 <div align="left">
 	<ul>
-		<li>home</li>
-		<li>profile</li>
+		<li>{{link-to 'home' 'jobbies' class='class'}}</li>
+		<li>{{link-to 'profile' 'jobbies.show' 1 class='class'}}</li>
 	</ul>
 </div>
 
