--- a/app/templates/components/jobby-item.hbs
+++ b/app/templates/components/jobby-item.hbs
@@ -1,1 +1,1 @@
-<li>{{link-to jobby.name 'jobbies.show' jobby.id}}</li>	
+<li>{{#link-to 'jobbies.show' jobby.id}} {{jobby.name }}- {{jobby.company}}{{/link-to}}</li>	
