--- a/app/templates/jobbies.hbs
+++ b/app/templates/jobbies.hbs
@@ -1,7 +1,6 @@
 <h1>Jobbies</h1>
-{{input type="text" id="search-todo" placeholder="Search Todo List..." value=searchTerm}}
+{{input type="text" id="search-todo" placeholder="Search company..." value=searchTerm}}
 {{#each jobby in model}}
-
 		{{jobby-item jobby=jobby}}
 {{/each}}
 {{outlet}}
